--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "remark": "13.0.0",
+    "remark-html": "13.0.1",
     "slugify": "1.5.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
